--- a/paper.tex
+++ b/paper.tex
@@ -7,13 +7,6 @@
 
 \usepackage{natbib}
 \usepackage{graphicx}
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    filecolor=magenta,
-    urlcolor=cyan,
-}
 
 \begin{document}
 
@@ -25,7 +18,8 @@ The purpose of this research is to build, apply, benchmark the effectiveness of 
 Time is a critical dimension to model phenomena in the natural world and in business process or markets as well. In application, time series modeling of financial assets requires specific knowledge related to econometrics, however time-sensitive family neural networks do not require exact specificity of the relationship found between models’ outputs and inputs; the relationship of seasonality, cyclical trends, etc. By studying this family of deep learning models specific to the cryptocurrency market, researchers observe and evaluate the models on criteria and recommend the best-in-class models specific to the cryptocurrency market.
 \paragraph{}
 Traditional econometric models such as Autoregressive Integrated Moving Average (ARIMA), Vector Autoregression (VAR) models, and related model families will be examined and included in the benchmark evaluation. Mode results evaluation should be based the following statistics or factors: MAE, RMSE, MAPE, Adjusted R2, number of hyper-parameters, number of parameters, bias-variance trade-off, computational effort, interpretability, and longevity.
-
+\paragraph{}
+Our team experimented with several LSTM models and are still deciding a model strategy. The current steps are taken to measure the actuals versus the predicteds. ROMAN NUMERIAL ONE: Import bitcoin pricing from 2012-current, to include open price, close price, high and low prices, volume transacted, and percentage change over a daily interval. ROMAN TWO: Plotted the distributions of each and determined the threshold for the training data. Most of the data is heavily skewed as to where past price changes and autocorrelation do not necesarrily represent the current trend nor the near-future trend of Bitcoin trading. ROMAN THREE: Scaled the dataand created the training and test structure. ROMAN FOUR: Built four models using various parameters (various activation functions, hidden nodes, dropout rates, batch sizes, etc.) ROMAN FIVE. Benchmarked the predicted values for four models versus the actuals. The results are fairly similar, however a more focused strategy for deep learning in time series needs to be developed (see results below).
 \paragraph{}
 Research questions initially posed include:
 \begin{enumerate}
@@ -44,7 +38,8 @@ Before the deep learning era, mathematical models and approaches for time series
     \item Time domain analysis: how the series evolves in relation to time. Temporal statistical features.
     \item Frequency domain analysis: how the series fluctuates in amplitude. Signal Processing, Fourier analysis and wavelets are common.
     \item Cluster Analysis: 'Nearest Neighbors' accounts for signals of differing length, where the notion of similarity breaks down.
-    \item (S)AR(I)MA(X) models: very popular; based on linear self-dependence inside of time series (autocorrelation) which can be used to explain future fluctuations.
+    \item ARIMA models: very popular; based on linear self-dependence inside of time series (autocorrelation) which can be used to explain future fluctuations.
+    \item VAR model: Multivariate AutoRegressive models that account for multiple variables unlike ARIMA.
     \item Decomposition: divide the series into logical parts that can be summed or multiplied to obtain the initial time series: trend part, seasonal part, and residuals.
     \item Nonlinear dynamics: differential equations (ordinary, partial, stochastic, etc.) for modeling dynamical systems that are in fact signals or time series.
     \item Machine learning: The subject of this paper. Can include any or all of the above. While it may or may not be wise to rely on human-in-the-loop ( and thus human-biased mathematical models and features ) – we ultimately seek near real-time automated decision support capabilities and with deep learning models we can determine feasibility along a vast swath of dimensions in both time and frequency domains.
@@ -67,22 +62,6 @@ Our dataset consists of the following:
     \item Bitcoin prices on a daily basis from x1 to x2
     \item Bitcoin prices on an hourly basis from x1 to x2
 \end{enumerate}
-\paragraph{}
-
-
-We regard the old wall street maxim 'The trend is your friend' to be a good starting point for the evaluation of deep learning on time series, so to reduce noise that might prevent the machine learning algorithm from learning the trend and structure, we will regularize the data with wavelet transformation using the \href{https://pywavelets.readthedocs.io/en/latest/#main-features}{PyWavelets library.}
-
-\paragraph{}
-The process is as follows:
-\begin{enumerate}
-\item The data is transformed using Wavelet transform.
-\item Coefficients more than 1 standard deviation away from the mean of coefficients are removed.
-\item Inverse transform the new coefficients to get the denoised data.
-\end{enumerate}
-
-\item Here is an example of how wavelet transforms denoise time series data:
-\[\left[W_\psi f\right](a, b) = \frac{1}{\sqrt{|a|}} \int_{-\infty}^\infty \overline{\psi\left(\frac{x-b}{a}\right)}f(x)dx\\]
-
 
 
 \subsection{Feature Engineering}
