--- a/paper.tex
+++ b/paper.tex
@@ -20,7 +20,7 @@
 \maketitle
 
 \section{Introduction}
-The purpose of this research is to benchmark the effectiveness of deep learning neural networks on price forecasting of bitcoin. Long-Short Term Memory (LSTM) and Recurrent Neural Networks (RNN) are explored due to their cutting-edge effectiveness.
+The purpose of this research is to benchmark the effectiveness of deep learning neural networks on price forecasting of bitcoin. Long-Short Term Memory (LSTM) and Recurrent Neural Networks (RNN) are explored due to their cutting-edge effectiveness. We integrate other mathematical methods and models into our research, such as: Time/Frequency domain analysis, Cluster Analysis, (S)AR(I)MA(X) models, Decomposition, Nonlinear dynamics, Machine learning.
 
 \paragraph{}
 Research questions initially posed include:
@@ -34,34 +34,22 @@ Our team experimented with several LSTM models and are still deciding a model st
 
 \begin{enumerate}
 \item Import bitcoin pricing from 2012-current, to include open price, close price, high and low prices, volume transacted, and percentage change over a daily interval.
-\item Plotted the distributions of each and determined the threshold for the training data. Most of the data is heavily skewed as to where past price changes and autocorrelation do not necessarily represent the current trend nor the near-future trend of Bitcoin trading.
+\item Plotted the distributions of each and determined the threshold for the training data. Most of the data is heavily skewed as to where past price changes and autocorrelation do not necessarily represent the current trend nor the near-future trend of Bitcoin prices.
 \item Scaled the data and created the training and test structure.
 \item Built four models using various parameters (various activation functions, hidden nodes, dropout rates, batch sizes, etc.)
 \item Benchmarked the predicted values for four models versus the actuals.
 \end{enumerate}
 \paragraph{}
 The results are fairly similar, however a more focused strategy for deep learning in time series needs to be developed (see results below).
-\section{Traditional Approaches}
-\paragraph{}
-Before the deep learning era, mathematical models and approaches for time series and signal processing included the following:
 
-\begin{enumerate}
-    \item Time/Frequency domain analysis: how the series evolves in relation to time/amplitude; For the frequency domain. Signal Processing, Fourier analysis and Wavelet Transforms are common.
-    \item Cluster Analysis: 'Nearest Neighbors' accounts for signals of differing length, where the notion of similarity breaks down.
-    \item (S)AR(I)MA(X) models: very popular; based on linear self-dependence inside of time series (autocorrelation) which can be used to explain future fluctuations.
-    \item Decomposition: divide the series into logical parts that can be summed or multiplied to obtain the initial time series: trend part, seasonal part, and residuals.
-    \item Nonlinear dynamics: differential equations (ordinary, partial, stochastic, etc.) for modeling dynamical systems that are in fact signals or time series.
-    \item Machine learning: The subject of this paper; Can include any or all of the above. There is great potential for deep learning models to help determine feasibility along a vast swath of dimensions.
-\end{enumerate}
-
-\section{Deep Learning Approach}
+\section{Deep Learning for Time Series}
 \paragraph{We use Deep Recurrent Neural Networks to x, y, z.}
 
 \subsection{Dataset}
 \paragraph{}
 Our dataset consists of the following:
 \begin{enumerate}
-    \item Bitcoin prices on a daily basis from x1 to x2
+    \item Bitcoin prices on a daily basis from  to x2
     \item Bitcoin prices on an hourly basis from x1 to x2
 \end{enumerate}
 
@@ -83,7 +71,7 @@ The process is as follows:
 \subsection{Feature Engineering}
 
 \paragraph{}
-Many of the traditional approaches described above can be used for feature engineering and data augmentation. We explore a variety of data preprocessing and augmentation techniques we gathered from the literature, and implement them as part of our EDA (Exploratory Data Analysis). Our EDA includes the following:
+We explore a variety of data preprocessing and augmentation techniques gathered from the literature, and implement them as part of our EDA (Exploratory Data Analysis). Our EDA includes the following:
 
 \begin{enumerate}
 \item  We draw inspiration from the R2N2 \cite{1_website} algorithm, which uses the VAR and VARMAX algorithms to pre-process the time series data and produce residuals, which are used as input to an LSTM. We show that the VAR model, using the features ‘Price’ (closing value), ‘Open’, ‘High’, ‘Low’, ‘Volume’, and ‘Change \%’, performs quite well in one day forecasts. We can use these techniques to augment our data, providing both the raw features, as well as VAR and/or VARMAX residuals.
@@ -98,24 +86,24 @@ Many of the traditional approaches described above can be used for feature engin
 \paragraph{}
 We plan to use the root mean squared error (RMSE) between predicted and true financial time series as the cost function and evaluation metric for our models, as implemented in the EDA notebook. We also plan to build out a data pipeline using simple data stores (redis or sqlite).
 
-\subsection{Hyperparameters}
-\begin{enumerate}
-    \item Layers
-    \item alpha
-    \item gamma
-    \item dropout
-\end{enumerate}
+% \subsection{Hyperparameters}
+% \begin{enumerate}
+%     \item Layers
+%     \item alpha
+%     \item gamma
+%     \item dropout
+% \end{enumerate}
 
-\subsection{Our Model – Deep Recurrent Neural Nets with LSTM}
-% \begin{figure}[h!]
-% \centering
-% \includegraphics[scale=1.7]{universe}
-% \caption{The Universe}
-% \label{fig:universe}
-% \end{figure}
+% \subsection{Our Model – Deep Recurrent Neural Nets with LSTM}
+% % \begin{figure}[h!]
+% % \centering
+% % \includegraphics[scale=1.7]{universe}
+% % \caption{The Universe}
+% % \label{fig:universe}
+% % \end{figure}
 
-\section{Conclusion}
-``Time Series, in conjunction with deep neural nets is a win, win proposition for quantitative analysis of cryptoassets.'' \citep{adams1995hitchhiker}
+% \section{Conclusion}
+% ``Time Series, in conjunction with deep neural nets is a win, win proposition for quantitative analysis of cryptoassets.'' \citep{adams1995hitchhiker}
 
 \bibliographystyle{plain}
 \bibliography{references}
