--- a/lib/notebooks/btc_rnn_lstm.ipynb
+++ b/lib/notebooks/btc_rnn_lstm.ipynb
@@ -408,6 +408,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as numpy\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout, Activation, Flatten,Reshape\n",
+    "from keras.layers import Conv1D, MaxPooling1D\n",
+    "from keras.utils import np_utils\n",
+    "from keras.layers import LSTM, LeakyReLU\n",
+    "from keras.callbacks import CSVLogger, ModelCheckpoint\n",
+    "import h5py\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "from keras.backend.tensorflow_backend import set_session\n",
+    "\n",
+    "\n",
+    "\n",
+    "os.environ['CUDA_DEVICE_ORDER'] = 'PCI_BUS_ID'\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL']='2'\n",
+    "\n",
+    "config = tf.ConfigProto()\n",
+    "config.gpu_options.allow_growth = True\n",
+    "set_session(tf.Session(config=config))\n",
+    "\n",
+    "with h5py.File(''.join(['bitcoin2015to2017_close.h5']), 'r') as hf:\n",
+    "    datas = hf['inputs'].value\n",
+    "    labels = hf['outputs'].value\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "step_size = datas.shape[1]\n",
+    "units= 50\n",
+    "second_units = 30\n",
+    "batch_size = 8\n",
+    "nb_features = datas.shape[2]\n",
+    "epochs = 100\n",
+    "output_size=16\n",
+    "output_file_name='bitcoin2015to2017_close_LSTM_1_tanh_leaky_'\n",
+    "#split training validation\n",
+    "training_size = int(0.8* datas.shape[0])\n",
+    "training_datas = datas[:training_size,:]\n",
+    "training_labels = labels[:training_size,:,0]\n",
+    "validation_datas = datas[training_size:,:]\n",
+    "validation_labels = labels[training_size:,:,0]\n",
+    "\n",
+    "\n",
+    "#build model\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(units=units,activation='tanh', input_shape=(step_size,nb_features),return_sequences=False))\n",
+    "model.add(Dropout(0.8))\n",
+    "model.add(Dense(output_size))\n",
+    "model.add(LeakyReLU())\n",
+    "model.compile(loss='mse', optimizer='adam')\n",
+    "model.fit(training_datas, training_labels, batch_size=batch_size,validation_data=(validation_datas,validation_labels), epochs = epochs, callbacks=[CSVLogger(output_file_name+'.csv', append=True),ModelCheckpoint('weights/'+output_file_name+'-{epoch:02d}-{val_loss:.5f}.hdf5', monitor='val_loss', verbose=1,mode='min')])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 154,
    "metadata": {},
    "outputs": [],
