--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2,9 +2,16 @@
 \usepackage[utf8]{inputenc}
 
 \title{Time Series Forecasting with Deep Learning Models}
-\author{Eric Steen, Orion Darley, Ryan Silva – Stanford University }
+\author{Ryan Silva, Eric Steen, Orion Darley – Stanford University }
 \date{May 2019}
 
+\usepackage{dirtytalk}
+\usepackage{titlesec}
+% \setcounter{secnumdepth}{4}
+\titleformat{\paragraph}
+{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
+\titlespacing*{\paragraph}
+{0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
 \usepackage{natbib}
 \usepackage{graphicx}
 \usepackage{hyperref}
@@ -14,118 +21,164 @@
     filecolor=magenta,
     urlcolor=cyan,
 }
+\usepackage{multicol}
+\usepackage{geometry}
+ \geometry{
+ a4paper,
+ total={170mm,257mm},
+ left=20mm,
+ top=20mm,
+ }
 
 \begin{document}
 
 \maketitle
 
+\begin{abstract}
+Deep Learning models are increasingly used for a variety of time series forecasting applications and show significant promise as the industry-leading methodology for the foreseeable future, as previously used methods can be integrated into them easily. In this research, Deep Recurrent Neural Networks(RNN) with Long Short Term Memory(LSTM) are explored to handle the problem of uncertainty in Bitcoin(BTC) prices. We evaluate their efficacy in relation to more generally accepted time series approaches, in particular the (S)AR(I)MA(X) models. We imagine a cooperative utopia for man and machine to harmoniously unite in intuitive and logical unison for the continual improvement and sustainability of the economic machine by which we are all inter-dependently associated.
+\end{abstract}
+
+\begin{multicols}{2}
 \section{Introduction}
-The purpose of this research is to benchmark the effectiveness of deep learning neural networks on price forecasting of bitcoin. Long-Short Term Memory (LSTM) and Recurrent Neural Networks (RNN) are explored due to their cutting-edge effectiveness. We integrate (S)AR(I)MA(X) models into our RNN model.
-
-\paragraph{}
-Research questions initially posed include:
+ We apply deep learning to a duple of tactical parameters: lookback period and forecast length, hereby denoted as $\langle wlen, flen \rangle$ for window length and forecast length respectively. We execute a two-pronged strategy.:
 \begin{enumerate}
-    \item Can Deep Neural Nets outperform traditional time series models in forecasting price? If not, what, if any, advantages would the NNet approach provide?
-    \item How do hyperparameters affect the predictive ability of the LSTM and RNNs? Are deeper nets able to achieve better performance than shallow ones, or are one to two hidden layers a more effective approach for this type of task? What is an appropriate dropout rate for our task?
+\item We use a discrete Classification Model RNN model to determine the optimal hold period $flen$ for a position held over a given $wlen$ from a semi-random sequence of $\langle wlen, flen \rangle$ pairs.
+\item We use a continuous linear RNN model to predict the price following each set of chosen tactical parameters $\langle wlen, flen \rangle$.
 \end{enumerate}
+Minimization of hold period is highly desirable when risk & return characteristics are in parity across the set of tactical parameters as minimizing reduces value-at-risk in aggregate for a trading program. Having a sensible target price aids in tactical trading decisions such as risk-return calculations and exit point determination.
 
-\paragraph{}
-Our team experimented with several LSTM models and are still deciding a model strategy. The following steps are taken to measure the predicted values distance from ground truth:
 
-\begin{enumerate}
-\item Import bitcoin pricing from 2012-current, to include open price, close price, high and low prices, volume transacted, and percentage change over a daily interval.
-\item Plotted the distributions of each and determined the threshold for the training data. Most of the data is heavily skewed as to where past price changes and autocorrelation do not necessarily represent the current trend nor the near-future trend of Bitcoin prices.
-\item Scaled the data and created the training and test structure.
-\item Built four models using various parameters (various activation functions, hidden nodes, dropout rates, batch sizes, etc.)
-\item Benchmarked the predicted values for four models versus the actuals.
-\end{enumerate}
-\paragraph{}
-The results are fairly similar, however a more focused strategy for deep learning in time series needs to be developed (see results below).
+\section{Related Work}
+Several papers are relevant to our work including the R2N2 paper \cite{1_website}  which covered x,y...
 
-%%\includegraphics[width=9cm]{download}
-
-\section{Deep Recurrent Neural Nets for Time Series}
-\paragraph{We use RNN's to predict bitcoin prices.}
-
+\section{Methods}
 \subsection{Dataset}
-\paragraph{}
 Our dataset consists of the following:
 \begin{enumerate}
     \item Bitcoin prices on a daily basis since 2012
     \item Bitcoin prices on an hourly basis since july 2017
 \end{enumerate}
 
+
+\subsubsection{Scaling}
+\paragraph{Classification Model}
+We scale the both the price and volume series to adjust the range of values to be gaussian with zero mean and unit variance, without changing the distribution. This will prevent a feature with high variance that is orders of magnitude higher than other features from dominating and making the estimator unable to learn from other features correctly.
+\paragraph{Linear Model}
+Ryan
+
 \subsubsection{Regularization}
-\paragraph{}
-We regard the old wall street maxim 'The trend is your friend' to be a good starting point for the evaluation of deep learning on financial time series, so to reduce noise that might prevent the machine learning algorithm from learning the trend, we will explore regularizing the data with wavelet transformation using the \href{https://pywavelets.readthedocs.io/en/latest/#main-features}{PyWavelets library.}
+We regard the old wall street maxim "The trend is your friend" to be a good starting point for the evaluation of deep learning on financial time series. So in order to reduce noise that might prevent the machine learning algorithm from learning the trend, we regularize both the classification and linear models using a Kalman filter with the \href{https://pykalman.github.io/}{pykalman} library.
 
-\paragraph{}
-The process to regularize is as follows:
-\begin{enumerate}
-\item The data is transformed using a Wavelet transform.
-\item Coefficients more than 1 standard deviation away from the mean of coefficients are removed.
-\item Inverse transform the new coefficients to get the denoised data.
-\end{enumerate}
 
-\paragraph{}@TechReport{•,
-author = {•},
-title = {•},
-institution = {•},
-year = {•},
-OPTkey = {•},
-OPTtype = {•},
-OPTnumber = {•},
-OPTaddress = {•},
-OPTmonth = {•},
-OPTnote = {•},
-OPTannote = {•}
-}
-Here is the integral form of the wavelet transformation used by the \textit{PyWavelets} library:
-\[\left[W_\psi f\right](a, b) = \frac{1}{\sqrt{|a|}} \int_{-\infty}^\infty \overline{\psi\left(\frac{x-b}{a}\right)}f(x)dx\]
+\paragraph{Kalman Filter}
+The Kalman filter process has two steps:
+\begin{itemize}
+\item The prediction step, which uses a previously estimated state and
+  the linear model to predict the value of the next state as well as
+  the states estimated covariance.
+
+\item The update step, which uses the current output together with the statistical properties of the model, to
+  correct the state estimate. The values calculated are the innovation
+  covariance, the Kalman gain resulting in the updated state estimate
+  and state estimate covariance.
+\end{itemize}
+
+
+\subsubsection{Preprocessing}
+\paragraph{Classification Model}
+Eric TODO (windowing and balancing the data) \cite{4_website}
+\paragraph{Linear Model}
+Ryan TODO
+
 
 \subsection{Feature Engineering}
-
-\paragraph{}
 We explore a variety of data preprocessing and augmentation techniques gathered from the literature, and implement them as part of our EDA (Exploratory Data Analysis). Our EDA includes the following:
+\paragraph{Classification Model}
+Price and Volume were used in the classification model for simplicity to ensure model sensitivity to the most widely distributed data features in the financial asset space.
 
-\begin{enumerate}
-\item  We draw inspiration from the R2N2 \cite{1_website} algorithm, which uses the VAR and VARMAX algorithms to pre-process the time series data and produce residuals, which are used as input to an LSTM. We show that the VAR model performs quite well in one day forecasts. We can use these techniques to augment our data, providing both the raw features, as well as VAR and/or VARMAX residuals.
+\say{Everything should be made as simple as possible, but not simpler. } - Albert Einstein
 
-\item Found some success by pre-processing the data using filters, namely the Kalman and Wavelet filters \cite{2_website}.
+\paragraph{Linear Model}
+Ryan TODO (ta library) \cite{3_website}.
 
-\item 3 \cite{3_website} gives multiple technical indicators for data augmentation including momentum, trend, volatility, and volume. These can be calculated with the python ‘TA’ library . These features can be used to further augment the LSTM input.
 
-\item 4 \cite{4_website} proposes the technique of segmenting the time series into a number of consecutive 'windows'  , and a label which is the next window of data. Preprocessing the data into this format and saving to disk can save a lot of computation time each run. There are also many hyperparameters here, such as the size of the window, how many windows to include in a training example, if and how much he windows overlap, etc.
-\end{enumerate}
+\subsection{Activation, Loss}
+\paragraph{Classification Model}
+Eric TODO (windowing and balancing the data) \cite{4_website}
+\paragraph{Linear Model}
+Ryan TODO (ta library) \cite{3_website}.
 
-\paragraph{}
 We plan to use the root mean squared error (RMSE) between predicted and true financial time series as the cost function and evaluation metric for our models, as implemented in the EDA notebook. We also plan to build out a data pipeline using simple data stores (redis or sqlite).
+
+
+\subsection{Hyperparameter Tuning}
+The hyperparameter decisions that were most effective at tuning the model were smaller number of hidden units per layer, dropout, scaling and normalizing the data in the pre-processing step, learning rate, and batch normalization.
+\subsubsection{Network Architecture}
+\paragraph{Classification Model}
+A 3 layer RNN model for Classification Model with no kernel or activity regularization was effective to a desirable level of accuracy.
+\paragraph{Linear Model}
+The linear model (Ryan)...
+\subsubsection{Number of Epochs}
+\paragraph{Classification Model}
+A 50-75 epoch run was most effective for the classifiction model as validation loss increased beyond with a slight decline in accuracy, and X-X for the linear model.
+\paragraph{Linear Model}
+The linear model (Ryan)...
+\subsubsection{Batch Size}
+\paragraph{Classification Model}
+Due to the 'small data' nature of our inquiry, a lower batch size of 64 for the binary model sufficed.
+\paragraph{Linear Model}
+A batch size of 32 was adequate for the linear model.
+\subsubsection{Learning Rate}
+\paragraph{Classification Model}
+.001
+\paragraph{Linear Model}
+.001
+\subsubsection{Dropout}
+\paragraph{Classification Model}
+A dropout ratio of 0.4 improved the volatility of the classification model significantly from baseline (sans any regularization).
+\paragraph{Linear Model}
+The linear model (Ryan)...
+\subsubsection{Loss Functions}
+\paragraph{Classification Model}
+Eric TODO 'adam'
+\paragraph{Linear Model}
+The linear model (Ryan)...
+\subsubsection{Activation Functions}
+\paragraph{Classification Model}
+Eric TODO 'sparse_categorical_crossentropy'
+\paragraph{Linear Model}
+\subsubsection{Hidden Units}
+\paragraph{Classification Model}
+Given the 'small data' nature of our inquiry, a lower number of units was most effective for increasing accuracy, reducing loss, and decreasing overall volatility of metrics.
+\paragraph{Linear Model}
+\subsection{Tactical Parameters}
+Our research showed a 120 period window with a forecast period of 3 gave the greatest accuracy with the lowest loss and the least volatility of all other tested combinations, taking into account risk-parity considerations (4 periods showed very similar results, with slightly more stability in accuracy across epochs, but 3 gives less value-at-risk in practical application in finance).
+
+\subsection{Results}
+
+\subsubsection{Classification Model}
+A 120 period window with a forecast period of 3 was the optimal random swing trade for bitcoin since 10/11/2015. While this may change in the future, we are certain that additional data and feature engineering, novel approaches, and additional human insights will enhance the tactics disclosed herein.
+\subsubsection{Linear Prediction}
+Ryan
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.5]{download}
+\caption{Our Results}
+\label{fig:download}
+\end{figure}
+
+\section{Conclusions}
+Deep Recurrent Neural Networks are
+% \section{Analysis}
+% ``Time Series, in conjunction with deep neural nets is a win, win proposition for quantitative analysis of cryptoassets.'' \citep{adams1995hitchhiker}
+\section{Future Work}
 
 \section{Code}
 Our code is at \url{https://github.com/ericsteen/crypto_data}
-The code of particular interest is in \verb btc_lstm_final_v2.ipynb  and \verb data_experiments.ipynb. Data gathering scripts are located in /lib as well.
+The code of particular interest is in \verb price_rnn.py  and \verb data_experiments.ipynb. Data gathering scripts are located in /lib as well.
 
-\bibliography{references}
-
-% \subsection{Hyperparameters}
-% \begin{enumerate}
-%     \item Layers
-%     \item alpha
-%     \item gamma
-%     \item dropout
-% \end{enumerate}
-
-% \subsection{Our Model – Deep Recurrent Neural Nets with LSTM}
-% % \begin{figure}[h!]
-% % \centering
-% % \includegraphics[scale=1.7]{universe}
-% % \caption{The Universe}
-% % \label{fig:universe}
-% % \end{figure}
-
-% \section{Conclusion}
-% ``Time Series, in conjunction with deep neural nets is a win, win proposition for quantitative analysis of cryptoassets.'' \citep{adams1995hitchhiker}
-
+\end{multicols}
 \bibliographystyle{plain}
-
+\bibliography{references}
 \end{document}
